@@ -1,6 +1,7 @@
 Changelog for Yii User Management Module (Yum) 
 
 New in 0.8:
+- Added possibility to make roles selectable on registration (thyseus)
 - Added user Generator (available under 'other' when debug mode is enabled)
 - New default URL route '<app>/user/login' instead of less beautiful '<app>/user/user/login' (thyseus)
 - Refactored Registration Process into YumRegistrationController (makes YumUserController less fussy) (thyseus)
